--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../multimedia/img/persona-smartphone.jpg class="d-block w-100" alt="...">
+                    <img src="../multimedia/img/persona-smartphone.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Contacto</h5>
                         <p>Dejanos tu consulta</p>
