--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>¡Bienvenidos! - FP Marketing Digital</title>
+    <meta name="description" content="En FP-Marketing Digital te ofrecemos una gran variedad de servicios para aprovechar el potencial de tu negocio o marca en redes sociales">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon" href="./multimedia/img/FP-Marketing Digital.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./multimedia/img/Logo  - FP Marketing Digital.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -20,7 +21,7 @@
                     <li><a href="./pages/quienes_somos.html">Quienes Somos</a></li>
                     <li><a href="./pages/contacto.html">Contacto</a></li>
                 </ul>
-                <img src="./multimedia/img/Logo  - FP Marketing Digital.png" alt="">
+                <img src="./multimedia/img/Logo  - FP Marketing Digital.png" alt="logo FP Mkt Digital">
             </nav>
                 <div id="carouselExampleCaptions" class="carousel slide">
                     <div class="carousel-indicators">
@@ -30,21 +31,21 @@
                     </div>
                     <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./multimedia/img/home-office.jpg" class="d-block w-100" alt="...">
+                        <img src="./multimedia/img/home-office.jpg" class="d-block w-100" alt="home office">
                         <div class="carousel-caption d-none d-md-block">
                         <h5>FP-Marketing Digital</h5>
                         <p>Potencia tu marca</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./multimedia/img/like-comment-follow.jpg" class="d-block w-100" alt="...">
+                        <img src="./multimedia/img/like-comment-follow.jpg" class="d-block w-100" alt="likes">
                         <div class="carousel-caption d-none d-md-block">
                         <h5>FP-Marketing Digital</h5>
                         <p>Potencia tu marca</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./multimedia/img/notebook.png" class="d-block w-100" alt="...">
+                        <img src="./multimedia/img/notebook.png" class="d-block w-100" alt="notebook">
                         <div class="carousel-caption d-none d-md-block">
                         <h5>FP-Marketing Digital</h5>
                         <p>Potencia tu marca</p>
