--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios - FP Marketing Digital</title>
+    <meta name="description" content="Ofrecemos diferentes servicios que se ajustan a las necesidades de tu marca">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon" href="../multimedia/img/FP-Marketing Digital.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../multimedia/img/Logo  - FP Marketing Digital.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -20,7 +21,7 @@
                 <li><a href="./quienes_somos.html">Quienes Somos</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
-            <img src="../multimedia/img/Logo  - FP Marketing Digital.png" alt="">
+            <img src="../multimedia/img/Logo  - FP Marketing Digital.png" alt="logo">
         </nav>
         
         <div id="carouselExampleCaptions" class="carousel slide">
@@ -31,14 +32,14 @@
             </div>
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../multimedia/img/mapa-mesa-madera.jpg" class="d-block w-100" alt="...">
+                <img src="../multimedia/img/mapa-mesa-madera.jpg" class="d-block w-100" alt="mesa trabajo">
                 <div class="carousel-caption d-none d-md-block">
                 <h5>Servicios</h5>
                 <p>Pensados para ayudarte</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../multimedia/img/notebook.png" class="d-block w-100" alt="...">
+                <img src="../multimedia/img/notebook.png" class="d-block w-100" alt="notebook">
                 <div class="carousel-caption d-none d-md-block">
                 <h5>Servicios</h5>
                 <p>Pensados para ayudarte</p>
